data/derived/comb/progs/unify/prog7390.ml.out
Characters 233-234:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type
         ('a * 'b) list -> int * int -> int list * int list
       but an expression was expected of type
         ('a * 'b) list -> int * int -> ('a * 'b) list
       Type int list * int list is not compatible with type ('a * 'b) list 
